ncc/testsuite/positive/ctor-default-param.n
class A{
  public this (x : int = 3) {
    System.Console.WriteLine (x);
  }
  public static Main () : void {
    _ = A();
    _ = A(1);
  }
}
/*
BEGIN-OUTPUT
3
1
END-OUTPUT
*/
