ncc/testsuite/negative/splices.n

class Bug624 {
   public Stuff (t : int) : void {
     System.Console.WriteLine(typeof($t)); // E: splicing
     def term = "foo";
     _ = $ "$(1 : $term)"; // E: splicing
   } 
}
